--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
   <!-- Custom Styles -->
   <script src="https://kit.fontawesome.com/4327afb6c1.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="/css/nav home.css">
-  <link rel="stylesheet" href="/css/team.css">
-  <link rel="stylesheet" href="/css/shop.css">
-  <link rel="stylesheet" href="/css/about.css">
+  <link rel="stylesheet" href="/nav home.css">
+  <link rel="stylesheet" href="/team.css">
+  <link rel="stylesheet" href="/shop.css">
+  <link rel="stylesheet" href="/about.css">
 </head>
 
 <body>
